--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,11 +44,19 @@ html::-webkit-scrollbar-thumb {
   border-radius: 5rem;
 }
 
-
 .hide-scroll-bar {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
 .hide-scroll-bar::-webkit-scrollbar {
   display: none;
+}
+
+.glassBg {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
