--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,11 @@ html::-webkit-scrollbar-thumb {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
+
+@media (max-width: 1290px) {
+  .heroLine {
+    position: absolute !important;
+    left: -700px;
+    width: 30px;
+  }
+}
