--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,12 +53,12 @@ html::-webkit-scrollbar-thumb {
 }
 
 .glassBg {
-  background: rgba(255, 255, 255, 0.25);
+  background: white;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  /* backdrop-filter: blur(4px); */
+  /* -webkit-backdrop-filter: blur(4px); */
+  /* border-radius: 10px; */
+  /* border: 1px solid rgba(255, 255, 255, 0.18); */
 }
 
 @media (max-width: 1290px) {
